--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
 <body>
   <noscript>Spacemate Interior Design</noscript>
   <div id="root"></div>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
